--- a/package.json
+++ b/package.json
@@ -61,6 +61,6 @@
     "typescript": "^5"
   },
   "prisma": {
-    "schema": "prisma/mysql/schema.prisma"
+    "schema": "prisma/mongodb/schema.prisma"
   }
 }
